# monte-carlo-advisor

./: .gitignore  Makefile  README.md  benchmark_list  compile.py  diff_benchmarks.sh  half_launch.sh  inline_mc_advisor.py  inline_profiler.c  inline_profiler.cpp  inline_runner.py  interactive_host.py  launch.sh  log_reader.py  loop_unroll_mc_advisor.py  loop_unroll_runner.py  main.py  mc_advisor.py  mc_profiler.c  mc_profiler.cpp  monte_carlo_main.py  notes.txt  pyproject.toml  unrolling_runner.py  utils.py
advisors/: mc_advisor.py
advisors/inline/: inline_mc_advisor.py  inline_runner.py
advisors/loop_unroll/: loop_unroll_mc_advisor.py  loop_unroll_runner.py
advisors/merged/: merged_mc_advisor.py  merged_runner.py
example_modules/: loop_inline_main.cpp  loop_inline_module.cpp  loop_module.cpp  recursive_main.cpp
plots/: plot_main.py
src/: datastructures.py  monte_carlo_main.py  plot_main.py  utils.py
src/advisors/: log_reader.py  mc_advisor.py  mc_runner.py
src/advisors/inline/: inline_mc_advisor.py  inline_runner.py
src/advisors/loop_unroll/: loop_unroll_mc_advisor.py  loop_unroll_runner.py
src/advisors/merged/: merged_mc_advisor.py  merged_runner.py
src/advisors/reg_alloc/: reg_alloc_eviction_advisor.py  reg_alloc_eviction_runner.py
test/: test_get_max_state.py  test_set_state_as_fully_explored.py
tests/: Makefile  loop_main.cpp  loop_module.cpp  main.cpp  recursive_main.cpp  recursive_module.cpp
unit_tests/: test_get_max_state.py
